# BeagleCar

./: .clang-format  CMakeLists.txt  README.md  wifi_client.sh
app/: CMakeLists.txt
app/include/: lcd_stream_recv.h  receiver.h  sender.h  udp_constants.h
app/src/: controller.c  controller.cpp  lcd_stream_recv.cpp  main.c  main.cpp  receiver.c  sender.c  udp.c
hal/: CMakeLists.txt
hal/include/hal/: gpio.h  gpioMotor.h  i2c.h  joystick.h  lcd.h  motor.h  rotaryEncoderMotor.h  rotary_encoder.h  servo.h
hal/src/: gpio.c  gpioMotor.c  i2c.c  joystick.c  lcd.c  motor.c  rotaryEncoderMotor.c  rotary_encoder.c  servo.c
header_files/: CMakeLists.txt  crow_all.h
lcd/: Makefile  cmake_install.cmake
lcd/lib/LCD/: LCD_0in96.h  LCD_1in14.c  LCD_1in14.h  LCD_1in28.c  LCD_1in28.h  LCD_1in3.c  LCD_1in3.h  LCD_1in47.c  LCD_1in47.h  LCD_1in54.c  LCD_1in54.h  LCD_1in69.c  LCD_1in69.h  LCD_1in8.c  LCD_1in8.h  LCD_1in9.c  LCD_1in9.h  LCD_2inch.c  LCD_2inch.h  LCD_2inch4.c  LCD_2inch4.h
systemd_files/: Beagle_car.service  README.md  TEST.psk  setup.sh  systemd.sh
testing/: CMakeLists.txt
testing/src/: lcdVideoTest.cpp  motorTest.c  servoTest.c  udpStreamerTest.cpp  vidStreamerTest.cpp  webServerTest.c  webServerTest.cpp
udpStreamer/: CMakeLists.txt
udpStreamer/include/udpStreamer/: udpStreamer.h
util/: CMakeLists.txt
util/include/util/: common_funcs.h
util/src/: common_funcs.c
vidStreamer/: CMakeLists.txt
vidStreamer/include/vidStreamer/: vidStreamer.h
vidStreamer/src/: vidStreamer.cpp
webServer/: CMakeLists.txt
webServer/include/webServer/: webServerBlueprints.h
webServer/src/: webServerBlueprints.cpp
webServer/src/static/: websocket_example.js  websocket_page.html  websocket_video.html  websocket_video_example.js
webServer/src/templates/: template_page.html  template_page_no_value.html
webServer/video/: segment_and_fragment.sh
webcam/: CMakeLists.txt  Makefile  README.md  capture.c  crash-detection2.py  crash-detection3.py  receiveUDP.py
wifi_config_files/: dhcpd.conf  hostapd  hostapd.conf  isc-dhcp-server  wifi_ap.sh  wifi_client.sh  wpa_supplicant.conf
